--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,11 +2,11 @@ name: tests
 
 on:
   push:
-    branches: [ main ]
-    tags-ignore: ['v*'] # don't run when we make a release/publication
-  pull_request:
-    branches: [ main ]
-
+    tags:
+      - 'v*'  # trigger only when pushing a tag starting with "v" (e.g., v1.0.0)
+    branches:
+      - main  # only when the tag is on the main branch
+    
 jobs:
   build_wheels:
     name: Build wheels on ${{ matrix.os }}
