--- a/pyproject.toml
+++ b/pyproject.toml
@@ -76,6 +76,7 @@ pybind11 = "^2.9"
 bump2version = "^1.0.1"
 invoke = "^2.2.0"
 matplotlib = "^3.9.2"
+pandas = "^2.2.3"
 
 [tool.poetry.group.testing.dependencies]
 pytest = "^7.0"
