--- a/pyproject.toml
+++ b/pyproject.toml
@@ -75,12 +75,14 @@ pybind11 = "^2.9"
 [tool.poetry.group.dev.dependencies]
 bump2version = "^1.0.1"
 invoke = "^2.2.0"
+numpy = { version = "^2.0.1", python = ">=3.10"}
 matplotlib = "^3.9.2"
 pandas = "^2.2.3"
 
 [tool.poetry.group.testing.dependencies]
 pytest = "^7.0"
 numpy = { version = "^2.0.1", python = ">=3.10"}
+pandas = "^2.2.3"
 
 [tool.poetry.group.docs.dependencies]
 sphinx = { version = "^8.1", python = ">=3.10" }
