--- a/pyproject.toml
+++ b/pyproject.toml
@@ -82,6 +82,7 @@ pandas = "^2.2.3"
 [tool.poetry.group.testing.dependencies]
 pytest = "^7.0"
 numpy = { version = "^2.0.1", python = ">=3.10"}
+scipy = { version = "^1.14", python = ">=3.10"}
 pandas = "^2.2.3"
 
 [tool.poetry.group.docs.dependencies]
