--- a/pyproject.toml
+++ b/pyproject.toml
@@ -78,6 +78,7 @@ invoke = "^2.2.0"
 numpy = { version = "^2.0.1", python = ">=3.10"}
 matplotlib = "^3.9.2"
 pandas = "^2.2.3"
+sphinx-plotly-directive = "^0.1.3"
 
 [tool.poetry.group.testing.dependencies]
 pytest = "^7.0"
@@ -91,6 +92,10 @@ sphinx-rtd-theme = "^3.0.1"
 sphinxcontrib-napoleon = "^0.7"
 sphinx-autodoc-typehints = { version = "^2.5", python = ">=3.10" }
 myst-parser = { version = "^4.0", python = ">=3.10" }
+nbsphinx-link = "^1.3.0"
+sphinx-exec-code = "^0.12"
+sphinx-plotly-directive = "^0.1.3"
+ipython = "8.14"
 
 [tool.pytest.ini_options]
 addopts = "--ignore=_skbuild"
