--- a/pyproject.toml
+++ b/pyproject.toml
@@ -78,7 +78,6 @@ invoke = "^2.2.0"
 numpy = { version = "^2.0.1", python = ">=3.10"}
 matplotlib = "^3.9.2"
 pandas = "^2.2.3"
-sphinx-plotly-directive = "^0.1.3"
 
 [tool.poetry.group.testing.dependencies]
 pytest = "^7.0"
@@ -87,6 +86,8 @@ scipy = { version = "^1.14", python = ">=3.10"}
 pandas = "^2.2.3"
 
 [tool.poetry.group.docs.dependencies]
+matplotlib = "^3.9.2"
+numpy = { version = "^2.0.1", python = ">=3.10"}
 sphinx = { version = "^8.1", python = ">=3.10" }
 sphinx-rtd-theme = "^3.0.1"
 sphinxcontrib-napoleon = "^0.7"
