--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -31,7 +31,7 @@ jobs:
           CIBW_BUILD: cp39-* cp310-* cp311-*
           CIBW_TEST_REQUIRES: pytest numpy pandas scipy
           CIBW_TEST_COMMAND: "pytest {project}/tests"
-          MACOSX_DEPLOYMENT_TARGET: 10.13
+          # MACOSX_DEPLOYMENT_TARGET: 10.13
           # CIBW_ENVIRONMENT_MACOS: MACOSX_DEPLOYMENT_TARGET=10.13
 
       - name: Upload wheels
