--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -28,7 +28,7 @@ jobs:
         run: python -m cibuildwheel --output-dir wheelhouse
         env:
           CIBW_BUILD_VERBOSITY: 2
-          CIBW_SKIP: cp310-win32
+          CIBW_SKIP: "cp310-win32 cp311-win32 cp312-win32 cp313-win32"
           # CIBW_TEST_SKIP: cp310-win32
           CIBW_BUILD: cp39-* cp310-* cp311-*
           CIBW_TEST_REQUIRES: pytest numpy pandas scipy
