--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -27,14 +27,15 @@ jobs:
       - name: Build and test wheels
         run: python -m cibuildwheel --output-dir wheelhouse
         env:
-          CIBW_BUILD_VERBOSITY: 2
-          CIBW_SKIP: "cp310-win32 cp311-win32 cp312-win32 cp313-win32"
+          CIBW_BUILD_VERBOSITY: 1
+          CIBW_SKIP: "cp310-win32 cp311-win32 cp312-win32 cp313-win32 cp39-manylinux_i686 cp310-manylinux_i686 cp311-manylinux_i686 cp312-manylinux_i686 cp313-manylinux_i686"
           # CIBW_TEST_SKIP: cp310-win32
           CIBW_BUILD: cp39-* cp310-* cp311-*
           CIBW_TEST_REQUIRES: pytest numpy pandas scipy
           CIBW_TEST_COMMAND: "pytest {project}/tests"
           CIBW_ENVIRONMENT_MACOS: MACOSX_DEPLOYMENT_TARGET=10.13
           CIBW_ENVIRONMENT_WINDOWS: "PIP_ONLY_BINARY=:all:"
+          CIBW_ENVIRONMENT_LINUX: "PIP_ONLY_BINARY=:all:"
 
       - name: Upload wheels
         uses: actions/upload-artifact@v3
