refactored bindings and C++ code

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,13 +32,22 @@ FetchContent_MakeAvailable(pybind11)
 # ---------------------------------------------------------
 # Create the Python module
 # ---------------------------------------------------------
-pybind11_add_module(screamer_bindings MODULE bindings/screamer_bindings.cpp)
+
+# Collect all .cpp files in the bindings directory
+file(GLOB_RECURSE BINDING_SOURCES "bindings/*.cpp")
+
+# Collect all source files in the src directory
+file(GLOB_RECURSE SCREAMER_SOURCES "src/screamer/*.cpp")
+
+
+pybind11_add_module(screamer_bindings MODULE ${BINDING_SOURCES} ${SCREAMER_SOURCES})
 target_link_libraries(screamer_bindings PRIVATE pybind11::module)
 target_include_directories(
     screamer_bindings PUBLIC
     "${CMAKE_SOURCE_DIR}/include"
     "${pybind11_INCLUDE_DIRS}"
 )
+
 # Add optimization flags for performance
 target_compile_options(screamer_bindings PRIVATE
     -O3                # Enable maximum optimization
@@ -46,7 +55,6 @@ target_compile_options(screamer_bindings PRIVATE
     -flto              # Enable Link Time Optimization
     -ffast-math        # Enable fast math operations (may be unsafe for some code)
 )
-
 
 # Install the module into the Python package directory
 install(TARGETS screamer_bindings DESTINATION screamer)
