--- a/thijs/CMakeLists.txt
+++ b/thijs/CMakeLists.txt
@@ -6,6 +6,8 @@ project(Experiments)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+include_directories(${CMAKE_SOURCE_DIR}/../include)
+
 # Collect all .cpp files in the current directory
 file(GLOB EXPERIMENT_SOURCES "*.cpp")
 
